testsuite/tests/typecheck/should_fail/fd-loop.stderr

fd-loop.hs:12:10: error:
    • Variable ‘b’ occurs more often
        in the constraint ‘C a b’ than in the instance head ‘Eq (T a)’
      (Use UndecidableInstances to permit this)
    • In the instance declaration for ‘Eq (T a)’
